# po-translate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
src/po_translate/: cli.py  translate.py
tests/data/: ar.po
tests/tests_files/: ar.po
